gridpartdir = $(includedir)/dune/fem/gridpart
gridpart_HEADERS = adaptiveleafgridpart.hh \
                   adaptiveleafindexset.hh \
		   codimindexset.hh \
		   dunefemindexsets.hh \
		   emptyindexset.hh \
		   filteredgrid.hh \
                   gridpart.hh \
		   gridpartutility.hh \
		   idbasedleafgridpart.hh \
		   idbasedleafindexset.hh \
		   periodicgridpart.hh \
		   periodicindexset.hh
