gridpartdir = $(includedir)/dune/fem/gridpart
gridpart_HEADERS = adaptiveleafgridpart.hh \
                   adaptiveleafindexset.hh \
		   codimindexset.hh \
		   dunefemindexsets.hh \
		   emptyindexset.hh \
		   filteredgrid.hh \
                   gridpart.hh \
		   gridpartview.hh \
		   gridpartutility.hh \
		   idbasedleafgridpart.hh \
		   idbasedleafindexset.hh \
		   periodicgridpart.hh \
		   periodicindexset.hh

include $(top_srcdir)/am/global-rules

