# don't follow the full GNU-standard; we definitely need automake >= 1.5
AUTOMAKE_OPTIONS = foreign 1.5

miscdir =  $(includedir)/dune/fem/misc
misc_HEADERS = adaptiveindexmapper.hh \
							 adaptiveindexmapper_inline.hh \
							 bartonnackmaninterface.hh \
               boundaryidentifier.hh \
							 codimmap.hh \
 	 						 combineinterface.hh \
							 debug.hh \
							 double.hh \
							 double_inline.hh \
							 entityfunction.hh \
							 eoc.hh \
							 example.cc \
               femtuples.hh \
               gridwidth.hh \
               identity.hh \
							 l2error.hh \
               longexample.cc \
               nonconformitylevel.hh \
							 probeutility.hh \
							 suite.cc \
							 suite.hh \
               test.cc \
							 test.hh \
							 timeprovider.hh \
							 timeutility.hh \
               utility.hh
