# don't follow the full GNU-standard; we definitely need automake >= 1.5
AUTOMAKE_OPTIONS = foreign 1.5

miscdir =  $(includedir)/dune/fem/misc
misc_HEADERS = bartonnackmaninterface.hh \
         boundaryidentifier.hh \
	       checkgeomaffinity.hh \
	       codimmap.hh \
	       combineinterface.hh \
	       commhelper.hh \
	       debug.hh \
	       double.hh \
	       engineconcept.hh \
	       eoc.hh \
	       example.cc \
				 femtimer.hh \
         femtuples.hh \
	       fieldmatrixhelper.hh \
	       gridhelper.hh \
         gridwidth.hh \
	       h1norm.hh \
	       h1norm_inline.hh \
         identity.hh \
	       l1error.hh \
	       l2error.hh \
	       l2norm.hh \
	       l2norm_inline.hh \
               longexample.cc \
               metaprogramming.hh \
               nonconformitylevel.hh \
	       phonyiit.hh \
	       probeutility.hh \
	       suite.cc \
	       suite.hh \
	       test.cc \
	       test.hh \
	       timeprovider.hh \
	       timeutility.hh \
               utility.hh \
	       validator.hh
