# don't follow the full GNU-standard; we definitely need automake >= 1.5
AUTOMAKE_OPTIONS = foreign 1.5

SUBDIRS = common 0order 1order 2order matrix model projection 

operatordir =  $(includedir)/dune/fem/operator
operator_HEADERS = discretefeopimp.hh      elementintegratortraits.hh\
inverseoperators.hh discreteoperatorimp.hh  feop.hh\
lagrangedofhandler.hh elementintegrators.hh   feoperator.hh\
matrixadapter.hh\
lagrangeinterpolation.hh \
diffusionoperator.hh integrationoperator.hh cachedlinearoperator.hh\
dirichletboundaryoperator.hh sourceprojection.hh identityoperator.hh
