# $Id$

SUBDIRS = test

passdir =  $(includedir)/dune/fem/pass
pass_HEADERS = callerutility.hh  insertfunctionpass.hh \
modelcaller.hh  typetraits.hh dgelliptpass.hh   ldgflux.hh\
pass.hh	 utility.hh dgpass.hh	  leng.hh		 selection.hh\
discretemodel.hh  misc.hh		 tuples.hh \
ellipticdiscretemodel.hh ellipticmodelcaller.hh
