# $Id$

#SUBDIRS = test

passdir =  $(includedir)/dune/fem/pass
pass_HEADERS = callerutility.hh  createpass.hh insertfunctionpass.hh \
modelcaller.hh  typetraits.hh dgelliptpass.hh   ldgflux.hh\
pass.hh	 dgpass.hh  selection.hh\
discretemodel.hh  tuples.hh \
ellipticdiscretemodel.hh ellipticmodelcaller.hh limitpass.hh

include $(top_srcdir)/am/global-rules

