SUBDIRS = caching test 


quadraturedir =  $(includedir)/dune/fem/quadrature
quadrature_HEADERS = cachepointlist.hh \
										 cachequad.hh \
										 dunequadratures.hh \
                     elementpointlist.hh \
                     elementquadrature.hh \
                     gausspoints.hh \
										 gausspoints_implementation.hh \
										 idprovider.hh \
                     quadrature.hh \
										 quadratureimp.hh \
                     quadratureimp_inline.hh \
										 prismpoints.hh \
										 pyramidpoints.hh \
										 quadprovider.hh \
										 simplexpoints.hh
#ugquadratures.hh ugquadratures.cc 
